--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
   "scripts": {
     "post-autoload-dump": [
       "@prepare-extension-test-structure",
-      "mkdir --parents .Build/logs/"
+      "mkdir -p .Build/logs/"
     ],
     "prepare-extension-test-structure": [
       "Nimut\\TestingFramework\\Composer\\ExtensionTestEnvironment::prepare"
